# unranked

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cpp.990492B697EA578B.idx  names.cpp.BA513CED9C51522B.idx  names.h.9C19D44454EED16A.idx  player.cpp.E8FB0D1BD05517A7.idx  player.h.785C858B99BBEC32.idx
src/: main.cpp  names.cpp  names.h  player.cpp  player.h  team.cpp  team.h
